syntax = "proto3";

package dkg.dkgpb.v1;

option go_package = "github.com/obolnetwork/charon/dkg/dkgpb/v1";

message MsgLockHashK1Sig {
  bytes hash_signature = 1;
  uint32 peer_index = 2;
}